--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +24,10 @@
   color: white;
 }
 
+.App-intro {
+  color: #282c34;
+  font-size: 20px;
+}
 .App-link {
   color: #61dafb;
 }
